fix spacing in highValueProduct

--- a/css/style.css
+++ b/css/style.css
@@ -429,7 +429,7 @@ button:hover {
   font-weight: 400;
   line-height: 1.625;
   color: #5C6272;
-  margin-top: auto;
+  margin-top: 5px;
 }
 
 @media screen and (max-width: 1023.98px) {
