--- a/scss/_service.scss
+++ b/scss/_service.scss
@@ -88,7 +88,7 @@
         font-weight: 400;
         line-height: calc(26 / 16);
         color: $text-color;
-        margin-top: auto;
+        margin-top: 5px;
     }
 }
 @media screen and (max-width: 1023.98px) {
